<resources>
    <string name="app_name">Wine-a-be</string>
    <string name="front_view">Welcome Screen.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="memberships">Memberships</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="favorites">Show Favorites</string>
    <string name="winery_name">Winery Name</string>
    <string name="miles_away">x miles away</string>
    <string name="directions">Directions</string>
    <string name="about">About</string>
    <string name="wines">Wine Collection</string>
    <string name="membership_levels">Membership Levels</string>
    <string name="wine_bottle">Wine Bottle</string>
    <string name="price">Price</string>
    <string name="my_memberships">My Memberships</string>
</resources>
