<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WineryDetailsActivity.WineryDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="2dp">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/winery_name"
                android:layout_height="220dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_directions"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                android:background="@color/secondaryColor"
                android:textColor="@color/secondaryTextColor"
                android:layout_gravity="bottom|end"
                app:icon="@mipmap/navigate"
                app:iconTint="@color/secondaryTextColor"/>

        </FrameLayout>

        <View
            android:id="@+id/divider3"
            style="@style/divider"
            app:layout_constraintBottom_toTopOf="@id/text_headerAbout"
            app:layout_constraintTop_toBottomOf="@id/layout_logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/text_headerAbout"
            style="@style/wineDetailsHeader"
            android:text="@string/about"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/text_wineryDetails"
            style="@style/wineDetailsText"
            app:layout_constraintTop_toBottomOf="@id/text_headerAbout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/divider"
            style="@style/divider"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_wineryDetails"/>

        <TextView
            android:id="@+id/text_headerWines"
            style="@style/wineDetailsHeader"
            android:text="@string/wines"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/text_wines"
            style="@style/wineDetailsText"
            app:layout_constraintTop_toBottomOf="@id/text_headerWines"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/divider2"
            style="@style/divider"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_wines"/>

        <TextView
            android:id="@+id/text_headerMemberships"
            style="@style/wineDetailsHeader"
            android:text="@string/membership_levels"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/text_memberships"
            style="@style/wineDetailsText"
            app:layout_constraintTop_toBottomOf="@id/text_headerMemberships"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/divider4"
            style="@style/divider"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_memberships"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>